# sotsuken

./: .gitignore  README.md  docker-compose.yml  test.csv  yahoo-api.py
.devcontainer/: docker-compose.yml
classter/: bottom_up_classtering.py  classter.py  gbiz.py  generate_dummy_data.py  main.py  random_forest.py  requirements.txt
crawl/: change.py  crawler.py  get_comp_info.py  get_hojin_num.py  readme.md  test.csv  yahoo_api.py
crawl/util/: requests.py
network/: .dev.env  Dockerfile  pyproject.toml  requirements.txt
network/.devcontainer/: .devcontainer.json
network/app/: main.py
network/app/controller/: user_route.py
network/network/app/: main.py
network/network/app/controller/: handler.py  user_route.py
network/network/app/schemas/: handler_schema.py  uesr_route_schemas.py
network/network/app/util/: generator.py  observer.py
postgres/initdb/: V002_suggestions.sql  V003_users.sql  network.sql  suggestions.sql  users.sql
suggestions/: Dockerfile  pyproject.toml
suggestions/app/: main.py
suggestions/suggestions/app/: main.py
suggestions/suggestions/app/schemas/: controller_schemas.py
users/: pyproject.toml  requirements.txt
users/app/: main.py
users/app/resources/main/: V000_create_table.sql  V001_it-migrate.sql  migrate.sh
users/users/app/: main.py
users/users/app/models/: __init__.py  common.py  companies.py
users/users/app/resources/main/: V000_create_table.sql  migrate.sql
