[tool.poetry]
name = "network"
version = "0.1.0"
description = ""
authors = ["ren <drrr0502@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.4.1"
click = "8.0.1"
fastapi = "0.68.1"
gunicorn = "20.1.0"
h11 = "0.12.0"
httptools = "0.2.0"
pydantic = "1.8.2"
python-dotenv = "0.19.0"
PyYAML = "5.4.1"
requests = "2.28.1"
starlette = "0.14.2"
typing-extensions = "3.10.0.2"
uvicorn = "0.15.0"
uvloop = "0.16.0"
watchgod = "0.7"
websockets = "10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'network.app.main:main'