[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["ren <drrr0502@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.8.0"
asgiref = "3.4.1"
click = "8.0.1"
fastapi = "0.68.1"
greenlet = "1.1.2"
gunicorn = "20.1.0"
h11 = "0.12.0"
httptools = "0.2.0"
importlib-metadata = "4.12.0"
importlib-resources = "5.8.0"
Mako = "1.2.1"
MarkupSafe = "2.1.1"
psycopg2-binary = "2.9.3"
pydantic = "1.8.2"
python-dotenv = "0.19.0"
PyYAML = "5.4.1"
SQLAlchemy = "1.4.39"
starlette = "0.14.2"
typing-extensions = "3.10.0.2"
uvicorn = "0.15.0"
uvloop = "0.16.0"
watchgod = "0.7"
websockets = "10.0"
zipp = "3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'users.app.main:main'

